styles/Home.module.scss
@import "base";

.main {
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: #01203c;
  width: 100%;
  min-height: 800px;
  color: white;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.backgroundImage {
  height: 100vh;
  width: 100%;
  max-width: var(--max-width);
  overflow: hidden;
  position: relative;
}

.titleContainer {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-top: 150px;
  @include for-phone-only {
    font-size: 60%;
  }
}

.title {
  font-size: 400%;
  font-family: "Helvetica Neue", sans-serif;
  font-weight: 700;
  letter-spacing: -.04em;
  background: linear-gradient(137.59deg,#555 20%,#000 75%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
}

.subtitle {
  font-family: "Helvetica", sans-serif;
  @include for-phone-only {
    font-size: 130%;
  }
}

.backgroundLayer {
  display: block;
  position: absolute;
  bottom: 0;
  background-size: 100% auto;
  background-position: bottom;
  background-repeat: no-repeat;
  width: 100%;
  max-width: 100%;
  height: 100vh;
  @include for-phone-only {
    background-size: 300% auto;
  }
}

.description {
  display: inherit;
  justify-content: inherit;
  align-items: inherit;
  font-size: 0.85rem;
  max-width: var(--max-width);
  width: 100%;
  z-index: 2;
  font-family: var(--font-mono);
  color: #000;
}

.description a {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
}

.description p {
  position: relative;
  margin: 0;
  padding: 1rem;
  background-color: rgba(var(--callout-rgb), 0.5);
  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
  border-radius: var(--border-radius);
}

.code {
  font-weight: 700;
  font-family: var(--font-mono);
}

.grid {
  display: grid;
  grid-template-columns: repeat(3, minmax(33%, auto));
  max-width: 100%;
}

.card {
  padding: 1rem 1.2rem;
  border-radius: var(--border-radius);
  background: rgba(var(--card-rgb), 0);
  border: 1px solid rgba(var(--card-border-rgb), 0);
  transition: background 200ms, border 200ms;
}

.card span {
  display: inline-block;
  transition: transform 200ms;
}

.card h2 {
  font-weight: 600;
  margin-bottom: 0.7rem;
}

.card p {
  margin: 0;
  opacity: 0.6;
  font-size: 0.9rem;
  line-height: 1.5;
  max-width: 30ch;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  padding: 4rem 0;
}

/* Enable hover only on non-touch devices */
@media (hover: hover) and (pointer: fine) {
  .card:hover {
    background: rgba(var(--card-rgb), 0.1);
    border: 1px solid rgba(var(--card-border-rgb), 0.15);
  }

  .card:hover span {
    transform: translateX(4px);
  }
}

